--- a/Jordan_Moneyball.html
+++ b/Jordan_Moneyball.html
@@ -61,6 +61,61 @@
           lsf:{a:2,b:8,s1:'15',s2:'6'},lf:{a:2,b:3,s1:'13',s2:'15'},
           gf:{a:1,b:3,g:[{s1:'11',s2:'6'},{s1:'11',s2:'3'}]}
         }
+      },
+      '2026-02-20': {
+        tc:16,rg:3,rp:11,wc:8,
+        t:[
+          {p1Name:'Troy Clemmer',p1Dupr:'',p2Name:'Brandon Fritze',p2Dupr:''},
+          {p1Name:'Garrison Eaby',p1Dupr:'',p2Name:'Michael Benash',p2Dupr:''},
+          {p1Name:'Matt Meadows',p1Dupr:'',p2Name:'Matvey Radionov',p2Dupr:''},
+          {p1Name:'Jack Hared',p1Dupr:'',p2Name:'Ram Kotnana',p2Dupr:''},
+          {p1Name:'Jordan Denish',p1Dupr:'',p2Name:'Alex Tong',p2Dupr:''},
+          {p1Name:'Alex Szczepkowski',p1Dupr:'',p2Name:'Jase Volz',p2Dupr:''},
+          {p1Name:'Tyler Arsenault',p1Dupr:'',p2Name:'Zach Bowe',p2Dupr:''},
+          {p1Name:'Bruno Casino Remondo',p1Dupr:'',p2Name:'Drew Von Bargen',p2Dupr:''},
+          {p1Name:'Dylan Ashbach',p1Dupr:'',p2Name:'Steven Fernandez',p2Dupr:''},
+          {p1Name:'Matt Korsak',p1Dupr:'',p2Name:'Cody Sadreameli',p2Dupr:''},
+          {p1Name:'Brandon Fooks',p1Dupr:'',p2Name:'Kenoa Tio',p2Dupr:''},
+          {p1Name:'Lukas Choi',p1Dupr:'',p2Name:'Zachary Lessner',p2Dupr:''},
+          {p1Name:'Austin Keefer',p1Dupr:'',p2Name:'Mason McCabe',p2Dupr:''},
+          {p1Name:'Kevin Herod',p1Dupr:'',p2Name:'Jameson Mays',p2Dupr:''},
+          {p1Name:'Samuel Darla',p1Dupr:'',p2Name:'Ashwin Korde',p2Dupr:''},
+          {p1Name:'Matthew Chen',p1Dupr:'',p2Name:'Johny Mario',p2Dupr:''}
+        ],
+        ss:{g1m0:{s1:'11',s2:'3'},g1m1:{s1:'11',s2:'3'},g1m2:{s1:'11',s2:'1'},g1m3:{s1:'6',s2:'11'},g1m4:{s1:'11',s2:'5'},g1m5:{s1:'11',s2:'3'},g1m6:{s1:'11',s2:'5'},g1m7:{s1:'11',s2:'13'},g2m0:{s1:'12',s2:'10'},g2m1:{s1:'2',s2:'11'},g2m2:{s1:'11',s2:'4'},g2m3:{s1:'4',s2:'11'},g2m4:{s1:'11',s2:'6'},g2m5:{s1:'8',s2:'11'},g2m6:{s1:'11',s2:'2'},g2m7:{s1:'9',s2:'11'},g3m0:{s1:'13',s2:'11'},g3m1:{s1:'11',s2:'3'},g3m2:{s1:'11',s2:'2'},g3m3:{s1:'11',s2:'6'},g3m4:{s1:'11',s2:'1'},g3m5:{s1:'11',s2:'1'},g3m6:{s1:'11',s2:'2'},g3m7:{s1:'11',s2:'7'}},
+        bo:{},
+        rm:[
+          [{t1:0,t2:15},{t1:7,t2:8},{t1:1,t2:14},{t1:6,t2:9},{t1:2,t2:13},{t1:5,t2:10},{t1:3,t2:12},{t1:4,t2:11}],
+          [{t1:0,t2:8},{t1:15,t2:7},{t1:1,t2:9},{t1:14,t2:6},{t1:2,t2:10},{t1:13,t2:5},{t1:3,t2:11},{t1:12,t2:4}],
+          [{t1:0,t2:7},{t1:8,t2:15},{t1:1,t2:6},{t1:9,t2:14},{t1:2,t2:5},{t1:10,t2:13},{t1:3,t2:4},{t1:11,t2:12}]
+        ],
+        bt:'double',b3:true,ps:4,cc:8,
+        p:{0:0,1:1,2:2,3:3,4:3,5:2,6:1,7:0,8:0,9:1,10:2,11:3,12:3,13:2,14:1,15:0},
+        mg:true,oc:{},
+        bso:{winners:[
+          {seed:2,name:'Garrison Eaby / Michael Benash'},{seed:4,name:'Jack Hared / Ram Kotnana'},
+          {seed:3,name:'Matt Meadows / Matvey Radionov'},{seed:1,name:'Troy Clemmer / Brandon Fritze'},
+          {seed:10,name:'Matt Korsak / Cody Sadreameli'},{seed:8,name:'Bruno Casino Remondo / Drew Von Bargen'},
+          {seed:6,name:'Alex Szczepkowski / Jase Volz'},{seed:12,name:'Lukas Choi / Zachary Lessner'}
+        ],losers:[
+          {seed:9,name:'Dylan Ashbach / Steven Fernandez'},{seed:11,name:'Brandon Fooks / Kenoa Tio'},
+          {seed:7,name:'Tyler Arsenault / Zach Bowe'},{seed:5,name:'Jordan Denish / Alex Tong'},
+          {seed:13,name:'Austin Keefer / Mason McCabe'},{seed:14,name:'Kevin Herod / Jameson Mays'},
+          {seed:15,name:'Samuel Darla / Ashwin Korde'},{seed:16,name:'Matthew Chen / Johny Mario'}
+        ]},
+        ph:'bracket',
+        bs:{
+          wqf1:{a:2,b:12,s1:'15',s2:'1'},wqf2:{a:1,b:10,s1:'15',s2:'8'},wqf3:{a:4,b:6,s1:'15',s2:'8'},wqf4:{a:3,b:8,s1:'15',s2:'13'},
+          lr1m1:{a:9,b:16,s1:'15',s2:'7'},lr1m2:{a:5,b:13,s1:'15',s2:'6'},lr1m3:{a:11,b:15,s1:'15',s2:'4'},lr1m4:{a:11,b:14,s1:'8',s2:'15'},
+          wsf1:{a:2,b:1,s1:'16',s2:'14'},wsf2:{a:4,b:3,s1:'15',s2:'12'},
+          wf:{a:2,b:4,g:[{s1:'3',s2:'11'},{s1:'9',s2:'11'}]},
+          lr2m1:{a:9,b:7,s1:'15',s2:'8'},lr2m2:{a:5,b:8,s1:'15',s2:'13'},lr2m3:{a:11,b:12,s1:'10',s2:'15'},lr2m4:{a:14,b:10,s1:'14',s2:'16'},
+          lr3m1:{a:9,b:5,s1:'13',s2:'15'},lr3m2:{a:12,b:10,s1:'9',s2:'15'},
+          lr4m1:{a:5,b:1,s1:'9',s2:'15'},lr4m2:{a:5,b:3,s1:'11',s2:'15'},
+          lsf:{a:1,b:3,s1:'8',s2:'15'},lf:{a:3,b:2,s1:'15',s2:'10'},
+          gf:{a:4,b:3,g:[{s1:'11',s2:'4'},{s1:'9',s2:'11'},{s1:'1',s2:'11'}]},
+          gf2:{a:4,b:3,s1:'7',s2:'15'}
+        }
       }
     };
 
@@ -80,25 +135,26 @@
         id: '2026-02-20',
         date: 'February 20, 2026',
         title: 'Moneyball #2',
+        status: 'completed',
+        results: {
+          first: 'Matt Meadows / Matvey Radionov',
+          second: 'Jack Hared / Ram Kotnana',
+          third: 'Garrison Eaby / Michael Benash'
+        }
+      },
+      {
+        id: '2026-03-06',
+        date: 'March 6, 2026',
+        title: 'Moneyball #3',
         status: 'upcoming',
-        preloadedTeams: [
-          { p1Name: 'Brandon Fritze', p1Dupr: '', p2Name: 'Troy Clemmer', p2Dupr: '' },
-          { p1Name: 'Garrison Eaby', p1Dupr: '', p2Name: 'Michael Benash', p2Dupr: '' },
-          { p1Name: 'Matt Meadows', p1Dupr: '', p2Name: 'Matvey Radionov', p2Dupr: '' },
-          { p1Name: 'Jack Hared', p1Dupr: '', p2Name: 'Ram Kotnana', p2Dupr: '' },
-          { p1Name: 'Alex Tong', p1Dupr: '', p2Name: 'Jordan Denish', p2Dupr: '' },
-          { p1Name: 'Tyler Arsenault', p1Dupr: '', p2Name: 'Zach Bowe', p2Dupr: '' },
-          { p1Name: 'Dylan Ashbach', p1Dupr: '', p2Name: 'Steven Fernandez', p2Dupr: '' },
-          { p1Name: 'Lukas Choi', p1Dupr: '', p2Name: 'Zachary Lessner', p2Dupr: '' },
-          { p1Name: 'Cody Sadreameli', p1Dupr: '', p2Name: 'Matt Korsak', p2Dupr: '' },
-          { p1Name: 'Alex Szczepkowski', p1Dupr: '', p2Name: 'Jase Volz', p2Dupr: '' },
-          { p1Name: 'Brandon Fooks', p1Dupr: '', p2Name: 'Kenoa Tio', p2Dupr: '' },
-          { p1Name: 'Jameson Mays', p1Dupr: '', p2Name: 'Kevin Herod', p2Dupr: '' },
-          { p1Name: 'Kishan Shah', p1Dupr: '', p2Name: 'Thomas Abramski', p2Dupr: '' },
-          { p1Name: 'Austin Keefer', p1Dupr: '', p2Name: 'Mason McCabe', p2Dupr: '' },
-          { p1Name: 'Ashwin Korde', p1Dupr: '', p2Name: 'Samuel Darla', p2Dupr: '' },
-          { p1Name: 'Johny Mario', p1Dupr: '', p2Name: 'Matthew Chen', p2Dupr: '' },
-        ]
+        teamCount: 16
+      },
+      {
+        id: '2026-03-27',
+        date: 'March 27, 2026',
+        title: 'Moneyball #4',
+        status: 'upcoming',
+        teamCount: 16
       }
     ];
 
